2010-06-04  Richard Guenther  <rguenther@suse.de>

PR lto/41584
	* cgraph.h (struct varpool_node): Add lto_file_data field.
	* lto-cgraph.c (input_varpool_node): Initialize it.

	lto/
	* lto.c (lto_1_to_1_map): Use the proper file_data for
	varpool nodes.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@160258 138bc75d-0d04-0410-961f-82ee72b054a4